--- a/source/less/blocks/popup.less
+++ b/source/less/blocks/popup.less
@@ -352,6 +352,7 @@ label .popup__input:active {
 @media (min-width: @desktop-width) {
   .popup__button-submit {
     width: 321px;
+    margin-top: 0;
   }
 }
 
